--- a/frontend/src/tasks/tasksTable.css
+++ b/frontend/src/tasks/tasksTable.css
@@ -42,7 +42,8 @@
 }
 
 .tasks__title {
-  padding-bottom: 4px !important;
+  padding-top: 1px !important;
+  padding-bottom: 3px !important;
 }
 
 .tasks-table-container {
@@ -204,6 +205,7 @@
 }
 .tasks-table .tasks-row-container .tasks-row .tasks-id {
   width: 26px;
+  text-align: center;
 }
 .tasks-table .tasks-row-container .tasks-row .tasks-product {
   width: 129px;
@@ -226,6 +228,10 @@
 }
 .tasks-table .tasks-row-container .tasks-row .tasks-actions {
   width: 50px;
+}
+.tasks-table .tasks-row-container .tasks-row .tasks-actions__button {
+  padding-bottom: 3px;
+  width: 16px;
 }
 .tasks-table .tasks-row-container .tasks-row .tasks-start {
   padding-bottom: 3px;
@@ -344,7 +350,7 @@
 }
 
 .bulk-action-sidebar .bulk-action-sidebar__button {
-  padding-bottom: 12px;
+  padding-bottom: 15px;
   cursor: pointer;
 }
 
